[package]
name = "wealloc-issue"
version = "0.1.0"
authors = ["Thomas Foster <me@thomasfoster.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "2", features = ["chrono", "uuid"] }
chrono = { version = "0.4", features = ["wasmbind"] }
serde_json = "1"
uuid = { version =  "0.8", features = ["v5", "wasm-bindgen"] }
wee_alloc = "0.4"
worker = "0.0.6"

[profile.release]
lto = true
opt-level = "z"
